feature/navigation pt_1/2

--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/listCaracterFragment"
         android:icon="@drawable/ic_home"
         android:title="Home" />
 
     <item
+        android:id="@+id/searchCaracterFragment"
         android:icon="@drawable/ic_search"
-        android:title="Search" />
+        android:title="Pesquisa" />
 
     <item
+        android:id="@+id/favoriteCaracterFragment"
         android:icon="@drawable/ic_favorite_border"
         android:title="Favoritos" />
 
